# algorithms-lab1

./: CMakeLists.txt
linked-list/: exceptions.cpp  list.cpp  list.h  node.cpp  node.h
src/algorithms/: algorithms.h
src/heap/: BftIterator.cpp  BftIterator.h  CMakeLists.txt  DftIterator.cpp  DftIterator.h  Iterator.h  heap.cpp  heap.h  heap_node.cpp  heap_node.h
src/heap_spec/: CMakeLists.txt  index.cpp
src/queue/: CMakeLists.txt  index.cpp  node.h  queue.h
